# ioc

./: .dockerignore  .gitignore  NOTES.md  README.md  demo.dockerfile  docker-compose.yml
.github/: CODEOWNERS
.github/workflows/: test-pr.yml
ioc/: Cargo.toml  README.md
ioc-demo-ui/: README.md  index.html  package-lock.json  package.json  vite.config.ts
ioc-demo-ui/src/: App.tsx  index.css
ioc-demo-ui/src/components/: Chart.tsx  ConnectionTable.tsx  InputTable.tsx  OutputTable.tsx
ioc-demo-ui/src/ioc/: IocWebsocketClient.tsx
ioc-legacy/: Cargo.toml  README.md  clippy.toml
ioc-legacy/example-configs/: pid-second-order.yml  rpi-demo.yml
ioc-legacy/src/: channel.rs  devices.rs  input.rs  output.rs  sim.rs
ioc-legacy/src/devices/: pca9685.rs
ioc-legacy/src/input/: noise.rs
ioc-legacy/src/rpi/: pwm.rs
ioc-legacy/src/sim/: second_order_ode.rs
ioc-legacy/src/ws/: message.rs  output.rs  state.rs
ioc-workspace/: Cargo.toml  config.yml  littlefoot.yml  littlefoot_dev.yml
ioc-workspace/crates/ioc/: Cargo.toml
ioc-workspace/crates/ioc/src/: cfg.rs  dev.rs  lf.rs  main.rs  main.rsfoo
ioc-workspace/crates/ioc/src/config/: mod.rs
ioc-workspace/crates/ioc/src/config/module/: mod.rs
ioc-workspace/crates/ioc/src/config/pipe/: mod.rs
ioc-workspace/crates/ioc/src/config/transformer/: core.rs  extra.rs  mod.rs
ioc-workspace/crates/ioc_core/src/: channel.rs  controller.rs  error.rs  input.rs  lib.rs  pipe.rs  transformer.rs
ioc-workspace/crates/ioc_devices/: Cargo.toml
ioc-workspace/crates/ioc_devices/src/: error.rs  lib.rs
ioc-workspace/crates/ioc_devices/src/devices/: bmp180.rs  l3gd20.rs  lsm303.rs  lsm303dlhc.rs  mod.rs  pca9685.rs
ioc-workspace/crates/ioc_extra/: Cargo.toml
ioc-workspace/crates/ioc_extra/src/: lib.rs
ioc-workspace/crates/ioc_extra/src/controller/: average.rs  mod.rs
ioc-workspace/crates/ioc_extra/src/hw/: camera.rs  hbridge.rs  mod.rs  servo.rs
ioc-workspace/crates/ioc_extra/src/hw/camera/: child_process_stream.rs  image.rs  jpeg_stream_splitter.rs
ioc-workspace/crates/ioc_extra/src/input/: mod.rs  noise.rs
ioc-workspace/crates/ioc_extra/src/output/: childproc.rs  console.rs  mod.rs
ioc-workspace/crates/ioc_extra/src/transform/: hbridge.rs  linear.rs  mod.rs
ioc-workspace/crates/ioc_rpi_gpio/: Cargo.toml
ioc-workspace/crates/ioc_rpi_gpio/src/: error.rs  input.rs  lib.rs  output.rs
ioc-workspace/crates/ioc_rpi_gpio/src/input/: digital_bool.rs
ioc-workspace/crates/ioc_rpi_gpio/src/output/: digital_bool.rs  soft_pwm_float.rs
ioc-workspace/crates/ioc_server/: Cargo.toml
ioc-workspace/crates/ioc_server/src/: error.rs  lib.rs  server.rs
ioc-workspace/crates/ioc_server/src/server/: state.rs
ioc-workspace/crates/ioc_server/src/server/endpoint/: mjpeg_stream.rs  mod.rs  static_dir.rs  web_socket.rs
ioc-workspace/crates/ioc_server/src/server/endpoint/web_socket/: connection.rs  manager.rs  message.rs
ioc-workspace/crates/ioc_server/src/server/io/: input.rs  mod.rs  output.rs
ioc-workspace/example-configs/: littlefoot_dev.yml
ioc/crates/ioc/: Cargo.toml
ioc/crates/ioc/src/: main.rs
ioc/crates/ioc/src/config/: mod.rs
ioc/crates/ioc/src/config/module/: mod.rs
ioc/crates/ioc/src/config/pipe/: mod.rs
ioc/crates/ioc/src/config/transformer/: core.rs  extra.rs  mod.rs  sims.rs
ioc/crates/ioc_core/: Cargo.toml
ioc/crates/ioc_core/src/: error.rs  feedback.rs  lib.rs  pipe.rs  transformer.rs
ioc/crates/ioc_devices/: Cargo.toml
ioc/crates/ioc_devices/src/: error.rs  lib.rs
ioc/crates/ioc_devices/src/devices/: bmp180.rs  l3gd20.rs  lsm303dlhc.rs  mod.rs  pca9685.rs
ioc/crates/ioc_extra/: Cargo.toml
ioc/crates/ioc_extra/src/: lib.rs
ioc/crates/ioc_extra/src/controller/: average.rs  mod.rs
ioc/crates/ioc_extra/src/hw/: camera.rs
ioc/crates/ioc_extra/src/hw/camera/: child_process_stream.rs  image.rs  jpeg_stream_splitter.rs  manager.rs
ioc/crates/ioc_extra/src/input/: mod.rs  noise.rs
ioc/crates/ioc_extra/src/transform/: average.rs  function.rs  hbridge.rs  limiter.rs  linear.rs  mod.rs  pid.rs
ioc/crates/ioc_rpi_gpio/: Cargo.toml
ioc/crates/ioc_rpi_gpio/src/: error.rs  gpio.rs  input.rs  lib.rs  output.rs
ioc/crates/ioc_rpi_gpio/src/input/: digital_bool.rs
ioc/crates/ioc_rpi_gpio/src/output/: digital_bool.rs  soft_pwm_float.rs
ioc/crates/ioc_server/: Cargo.toml
ioc/crates/ioc_server/src/: lib.rs
ioc/crates/ioc_server/src/server/: io.rs  state.rs
ioc/crates/ioc_server/src/server/endpoint/: mjpeg_stream.rs  mod.rs  static_dir.rs  web_socket.rs
ioc/crates/ioc_server/src/server/endpoint/web_socket/: connection.rs  manager.rs  message.rs
ioc/crates/ioc_server/src/server/io/: input.rs  mod.rs  output.rs
ioc/crates/ioc_sims/: Cargo.toml
ioc/crates/ioc_sims/src/: damped_oscillator.rs  lib.rs
ioc/example-configs/: camera_demo.yml  hbridge_demo.yml  limiter_demo.yml  linear_transform_demo.yml  littlefoot.yml  littlefoot_dev.yml  pid-second-order.yml  pid_demo.yml  pid_demo2.yml  server_demo.yml  sim_demo.yml  simple-demo.yml  simpledemo.yml  window_avg_demo.yml
ioc/src/: channel.rs  config.rs  controller.rs  input.rs  lib.rs  main.rs  output.rs  rpi.rs  sim.rs  ws.rs
ioc/src/controller/: pid.rs
ioc/src/input/: constant.rs  noise.rs
ioc/src/rpi/: digital.rs  pwm.rs
ioc/src/sim/: second_order_ode.rs
ioc/src/ws/: input.rs  message.rs  mgr.rs  output.rs  state.rs
