[package]
name = "ioc"
version = "0.1.0"
edition = "2021"

[features]
default = ["ws-server"]
ws-server = ["dep:axum","dep:axum-extra","dep:tower","dep:tower-http","dep:serde_json"]
rpi = ["dep:rppal"]
devices = ["dep:pwm-pca9685"]

[dependencies]
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1.0", features = ["full"] }
rand = { version = "0.8.4" }
serde = { version = "1.0", features = ["derive"] }
config = "0.13.1"
futures = "0.3"
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }

# ws-server dependencies
axum = { version = "0.6.20", features = ["ws", "headers"], optional = true }
axum-extra = { version = "0.8.0", optional = true }
tower = { version = "0.4", features = ["util"], optional = true }
tower-http = { version = "0.4.0", features = ["fs", "trace"], optional = true }
serde_json = {version = "1.0", optional = true}

# raspberry pi dependencies 
rppal = { version = "0.16.1", optional = true }

# device dependencies 
pwm-pca9685 = { version = "0.3.1", optional = true }