[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.dependencies]
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1.0", features = ["rt-multi-thread","sync","macros","time","process","io-util","signal"] }
tokio-util = { version = "0.7.10" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
futures = { version = "0.3" }
futures-util = { version = "0.3" }

