[package]
name = "ioc_devices"
version = "0.0.1"
edition = "2021"


[features]
all = [ "lsm303agr", "pca9685", "lsm303dlhc" ]
pca9685 = [ "dep:pwm-pca9685", "embedded-hal-0" ]
lsm303agr = [ "dep:lsm303agr", "embedded-hal" ]
lsm303dlhc = [ "dep:lsm303dlhc", "embedded-hal-0" ]

[dependencies]
pwm-pca9685 = { version = "0.3.1", optional = true }
lsm303agr = { version = "1.0.0", optional = true }
lsm303dlhc = { version = "0.2.0", optional = true }
embedded-hal-0 = { version = "0.2.7", package = "embedded-hal", optional = true }
embedded-hal = { version = "1.0.0-rc.2", optional = true }


ioc_core = { path = "../ioc_core" }

tracing.workspace = true
tokio.workspace = true
serde.workspace = true
futures.workspace = true