[package]
name = "ioc_server"
version = "0.0.1"
edition = "2021"

[dependencies]
ioc_core = { path = "../ioc_core" }

axum = { version = "0.6.20", features = ["ws", "headers"] }
axum-extra = { version = "0.8.0" }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.4.0", features = ["fs", "trace"] }
serde_json = { version = "1.0" }


tracing.workspace = true
tokio.workspace = true
serde.workspace = true