[package]
name = "ioc_server"
version = "0.0.1"
edition = "2021"

[dependencies]
ioc_core = { path = "../ioc_core" }

axum = { version = "0.6.20", features = ["ws", "headers"] }
axum-extra = { version = "0.8.0" }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.4.0", features = ["fs", "trace"] }
http = { version = "1.0.0" }
http-body = { version = "1.0.0" }
bytes = { version = "1.5.0" }
serde_json = { version = "1.0" }
uuid = { version = "1.7.0", features = ["v4", "fast-rng"] }

tracing.workspace = true
tokio.workspace = true
serde.workspace = true
futures.workspace = true
futures-util.workspace = true