[package]
name = "ioc"
version = "0.0.1"
edition = "2021"

[features]
default = [ "server", "extra", "sims" ]
all = [ "default", "rpi", "devices", "extra", "sims" ]
rpi = [ "dep:ioc_rpi_gpio" ]
devices = [ "dep:ioc_devices" ]
server = [ "dep:ioc_server" ]
extra = [ "dep:ioc_extra" ]
sims = [ "dep:ioc_sims" ]

[dependencies]
ioc_core = { path = "../ioc_core" }
ioc_extra = { path = "../ioc_extra", optional = true }
ioc_rpi_gpio = { path = "../ioc_rpi_gpio", optional = true }
ioc_devices = { path = "../ioc_devices", features = ["all"], optional = true }
ioc_server = { path = "../ioc_server", optional = true }
ioc_sims = { path = "../ioc_sims", optional = true }


rand = "0.8.5"
config_rs = { version = "0.14.0", package="config", features = ["yaml"] }

tracing.workspace = true
tracing-subscriber.workspace = true
tokio.workspace = true
serde.workspace = true
futures-util.workspace = true