[package]
name = "ioc_extra"
version = "0.0.1"
edition = "2021"

[dependencies]
ioc_core = { path = "../ioc_core" }
jpeg-encoder = { version = "0.6.0" }
tokio-util = { version = "0.7.10" }
embedded-graphics = { version = "0.8.1" }
rand = "0.8.5"

tracing.workspace = true
tokio.workspace = true
serde.workspace = true
futures.workspace = true