[package]
name = "ioc_rpi_gpio"
version = "0.0.1"
edition = "2021"

[dependencies]
ioc_core = { path = "../ioc_core" }

rppal = { version = "0.17.1", features=["hal"] }
embedded-hal-0 = { version = "0.2.7", package = "embedded-hal", optional = true }
embedded-hal = { version = "1.0.0-rc.2", optional = true }


tracing.workspace = true
tokio.workspace = true
tokio-util.workspace = true
serde.workspace = true
futures.workspace = true
futures-util.workspace = true