[package]
name = "ioc_sims"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ioc_core = { path = "../ioc_core" }
peroxide = { version = "0.34.7", features = ["csv"]}
tracing.workspace = true
tokio.workspace = true